src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Secondary_Sub_Type__c</fullName>
        <description>Used to track secondary sub type for MDM and reference data</description>
        <label>Secondary Sub-Type</label>
        <picklist>
            <picklistValues>
                <fullName>Actuary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Broker Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clearing Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracting Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custody Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due Diligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educational Org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiduciary Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fund Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare Org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual/Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lending Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Authority (state, city, municipal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National/Federal Government Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orphan Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Analytics</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Type__c</fullName>
        <description>Used to track secondary type for MDM and reference data</description>
        <label>Secondary Type</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Dealer</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Street_Superfluous__c</fullName>
        <label>Street Superfluous</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TOTASSETS__c</fullName>
        <description>MMD Field</description>
        <label>MMD - Assets Represented ($Mil)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TOTCLIENTS__c</fullName>
        <description>MMD Field</description>
        <label>MMD - # of Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Reference data for Organization Type</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Client/Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custodian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client/Prospect;Client/Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client/Prospect;Client/Prospect;Client/Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client/Prospect;Client/Prospect;Client/Prospect;Client/Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client/Prospect;Client/Prospect;Client/Prospect;Client/Prospect;Client/Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client/Prospect;Client/Prospect;Client/Prospect;Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client/Prospect;Client/Prospect;Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client/Prospect;Client/Prospect;Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client/Prospect;Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client/Prospect;Investment Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client/Prospect;Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client/Prospect;Service Provider;Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client/Prospect;Special Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider;Service Provider</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>US_Retail_Tier__c</fullName>
        <description>Tracks Platinum, Gold, Silver, Bronze for Retail Clients</description>
        <label>US Retail Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>東芝企業年金基金</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ultimate_Parent_Sales_Status__c</fullName>
        <description>iTools hierarhy</description>
        <formula>TEXT(Parent.Sales_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ultimate Parent Sales Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_MMD_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use MMD Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_USD__c</fullName>
        <label>YTD Sales - USD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <description>MMD Field</description>
        <label>MMD Postal Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDuplicateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3Index__c</fullName>
        <label>Duplicate Check Index</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>isKanji__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Returns TRUE if Unicode in Alternate Name field is in Kanji</description>
        <label>isKanji</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>Type__c</columns>
        <columns>Organization_Sub_Type__c</columns>
        <columns>Sales_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Organizations</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>Type__c</columns>
        <columns>Organization_Sub_Type__c</columns>
        <columns>Sales_Status__c</columns>
        <filterScope>Team</filterScope>
        <label>My Organizations</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Recently_Created</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Organization_Sub_Type__c</columns>
        <columns>Sales_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>6/6/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>6/11/2016 12:00 AM</value>
        </filters>
        <label>Recently Created</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Global_Institutional_Client</fullName>
        <active>true</active>
        <description>Used for Institutional Client Organizations</description>
        <label>Global Institutional Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>Global_Institutional_Client_Verified</fullName>
        <active>true</active>
        <label>Global Institutional Client - Verified</label>
    </recordTypes>
    <recordTypes>
        <fullName>Global_Institutional_Prospect</fullName>
        <active>true</active>
        <description>Used for Institutional Prospects</description>
        <label>Global Institutional Prospect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Global_Institutional_Prospect_Verified</fullName>
        <active>true</active>
        <label>Global Institutional Prospect - Verified</label>
    </recordTypes>
    <recordTypes>
        <fullName>Global_Retail</fullName>
        <active>true</active>
        <description>Used for Retail Organizations</description>
        <label>Global Retail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Global_Retail_Verified</fullName>
        <active>true</active>
        <description>To be used for all records that have been mastered by MDM</description>
        <label>Global Retail - Verified</label>
    </recordTypes>
    <recordTypes>
        <fullName>Investment_Consultant</fullName>
        <active>true</active>
        <description>Used for Consultant Organizations</description>
        <label>Investment Consultant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Investment_Consultant_Verified</fullName>
        <active>true</active>
        <label>Investment Consultant - Verified</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Provider</fullName>
        <active>true</active>
        <description>To be selected when the Organization is only a Service Provider</description>
        <label>Service Provider</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Provider_Verified</fullName>
        <active>true</active>
        <label>Service Provider - Verified</label>
    </recordTypes>
    <recordTypes>
        <fullName>UNKNOWN</fullName>
        <active>true</active>
        <label>UNKNOWN</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>OrgBlankValidationRule</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
ISBLANK(Name),
ISPICKVAL(Type__c, &quot;&quot;),
ISBLANK(ShippingCountry)
)</errorConditionFormula>
        <errorMessage>Required fields for Account are Name, Type and Country</errorMessage>
    </validationRules>
</CustomObject>